Remove unused contact-success page and enhance styles.
The `contact-success.jsp` page has been removed, while new UI improvements and dynamic elements were introduced, such as header styling, responsive navigation, and email template utilities. Minor updates were also made to footer text and database models for better validation and structure.